# buildfarm

./: .bazelignore  .bazelrc  .bazelversion  .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS  BUILD  BUILD.googleapis  BUILD.remote_apis  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  Dockerfile.buildfarm  MODULE.bazel  README.md  Tiltfile  WORKSPACE  as-nobody-windows.c  as-nobody.c  bazel-buildfarm.Dockerfile  bazel.Tiltfile  bazelw  cgexec-wrapper  defs.bzl  delay.sh  dependencies.yaml  deps.bzl  docker-compose.yml  docker.bzl  extensions.bzl  feed.xml  generate.sh  generate_coverage.sh  generated.bzl  ij.bazelproject  images.bzl  (+9 more)
.bazelci/: abseil_integration_test.sh  cache_test.sh  checkstyle.sh  checkstyle_checks.xml  checkstyle_google_checks.xml  docker_unit_test.sh  fix_unused_deps.sh  format.sh  ingest_grpc_logs.py  integration_test.sh  package_name_check.sh  presubmit.yml  redis_unit_tests.sh  rpm_build.sh  run_abseil_test.sh  run_cgroups_sandbox_test.sh  run_checkstyle.sh  run_generative_cc_many_double_test.sh  run_generative_cc_many_test.sh  run_server_test.sh  static_analysis_checks.xml  static_analyze.sh  test_bfadmin.sh  test_buildfarm_container.sh  unused_deps.sh
.github/workflows/: buildfarm-helm-chart-lint.yml  buildfarm-helm-chart-publish.yml  buildfarm-images-build-and-deploy.yml  buildfarm-release-build-and-deploy.yml  buildfarm-worker-base-build-and-deploy.yml  codeql-analysis.yml  codeql.yml  license.yaml  main.yml  scorecards.yml  tilt.yml
_site/: Gemfile  _config.yml  index.md
_site/_includes/: fix_linenos.html  nav.html
_site/_layouts/: default.html
_site/_posts/: 2020-12-08-welcome-to-jekyll.markdown
_site/_sass/: buttons.scss  code.scss  layout.scss  navigation.scss  search.scss
_site/_sass/color_schemes/: light.scss
_site/_sass/support/: _variables.scss
_site/_site/: 404.html  feed.xml  index.html
_site/assets/js/: just-the-docs.js
_site/docs/: admin.md  configuration.md  develop.md  features.md  quick_start.md
_site/docs/architecture/: CASFileCache.md  action_cache.md  architecture.md  content_addressable_storage.md  instance_types.md  queues.md  redis-stream-queues.md  redis.md  schedulers.md  worker-execution-environment.md  workers.md
_site/docs/configuration/: authentication.md  configuration.md
_site/docs/contribute/: contribute.md  design-documents.md  local_development.md
_site/docs/execution/: builds-without-the-bytes.md  debugging-executions.md  environment.md  exec_owner.md  execution.md  execution_limiting.md  execution_policies.md  execution_properties.md  observability.md
_site/docs/metrics/: alerts.md  metrics.md
_site/docs/security/: security.md
_site/docs/tools/: bf-cat.md  tools.md  troubleshooting-bazel-remote-execution.md
admin/main/: README.txt  mvnw  pom.xml
admin/test/: run.sh
assets/css/: just-the-docs-dark.css  just-the-docs-dark.css.map  just-the-docs-default.css  just-the-docs-default.css.map  just-the-docs-light.css  just-the-docs-light.css.map
assets/js/: just-the-docs.js  search-data.json
bazel/rules/: java.bzl
ci/: license-header.txt
ci/base-worker-image/jammy/: Dockerfile
ci/base-worker-image/lunar/: Dockerfile
ci/base-worker-image/mantic/: Dockerfile
ci/base-worker-image/noble/: Dockerfile
config/: BUILD  backplane.yml  config.minimal.yml  logging.properties  queues.yml  worker.yml
container/: BUILD  defs.bzl
container/test/: BUILD  example_config.yaml  server.yaml  telemetry_tools.yaml  worker.yaml  worker_wrappers.yaml
contrib/aosp/: README.md
contrib/k6/: README.md  getcapabilities.js  missingblobs.js
deployments/: BUILD  redis-cluster.yaml  server.yaml
docs/admin/: index.html
docs/architecture/CASFileCache/: index.html
docs/architecture/action_cache/: index.html
docs/architecture/architecture/: index.html
docs/architecture/content_addressable_storage/: index.html
docs/architecture/instance_types/: index.html
docs/architecture/queues/: index.html
docs/architecture/redis/: index.html
docs/architecture/schedulers/: index.html
docs/architecture/worker-execution-environment/: index.html
docs/architecture/workers/: index.html
docs/configuration/authentication/: index.html
docs/configuration/configuration/: index.html
docs/contribute/contribute/: index.html
docs/contribute/design-documents/: index.html
docs/contribute/local_development/: index.html
docs/execution/builds-without-the-bytes/: index.html
docs/execution/debugging-executions/: index.html
docs/execution/environment/: index.html
docs/features/: index.html
docs/quick_start/: index.html
e2e/: run_e2e_tests.sh
e2e/.setup_buildfarm/: backplane.yml  config-server.yml  config-worker.yml  docker-compose.yml
e2e/output_directories/: .bazelrc  BUILD  MODULE.bazel  create_dir_with_files.sh  test_colors.sh  test_fruits.sh
examples/: BUILD  bf-run  config-storage-worker.yml  config.cgroups-sandbox.yml  config.memory.yml  config.minimal.yml  config.shard.yml  config.yml  debug.logging.properties  development-redis-cluster.sh  logging.properties  server-logging.properties  server.config.example  server.yml  shard-server.config.example  shard-worker.config.example  worker-logging.properties  worker.config.example  worker.docker.config.example  worker.yml
examples/gpu/: shard-cpu-worker.config.example  shard-gpu-worker.config.example  shard-server.config.example  shard-worker.config.example
kubernetes/: redis-cluster.yaml  shard-worker.yaml
kubernetes/deployments/: BUILD  minio.yaml  redis-cluster.yaml  server.yaml  shard-worker.yaml
kubernetes/services/: BUILD  grafana.yaml  jaeger.yaml  minio.yaml  open-telemetry.yaml  redis-cluster.yaml  shard-worker.yaml
src/execution_wrappers/: BUILD  as-nobody.c  macos-wrapper.sh
src/main/native/: BUILD  (+1 more)
src/main/protobuf/: BUILD  BUILD.bazel
tilt_modules/: extensions.json
tilt_modules/helm_remote/: Tiltfile
tools/: buildfarm-indexer.py  get_volatile_workspace_status
tools/lint/hawkeye/: BUILD.bazel  extensions.bzl  hawkeye.BUILD
tools/nullaway/: BUILD  README.md
(+169 files in other folders)
