"""Buildfarm build and test"""

module(
    name = "build_buildfarm",
    repo_name = "build_buildfarm",
)

bazel_dep(name = "grpc", version = "1.74.1", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "blake3", version = "1.8.2")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "gazelle", version = "0.46.0")
bazel_dep(name = "grpc-java", version = "1.75.0")
bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a")
bazel_dep(name = "grpc-proto", version = "0.0.0-20240627-ec30f58", repo_name = "io_grpc_grpc_proto")
bazel_dep(name = "hermetic_cc_toolchain", version = "3.2.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "29.5", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.2.13")
bazel_dep(name = "rules_java", version = "8.15.2")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_img", version = "0.2.9")
bazel_dep(name = "rules_pkg", version = "1.1.0")

# Test dependencies
bazel_dep(
    name = "container_structure_test",
    version = "1.21.1",
    dev_dependency = True,
)

bazel_dep(name = "bazel_remote_apis", version = "e94a7ece2a1e8da1dcf278a0baf2edfe7baafb94", repo_name = "remoteapis")
archive_override(
    module_name = "bazel_remote_apis",
    integrity = "sha256-ZDtGnl29H5spbghbCEbMF/wOKzq8td40CVnXuD2nvZo=",
    patches = [
        "//third_party:remote_apis_grpc.patch",
    ],
    strip_prefix = "remote-apis-e94a7ece2a1e8da1dcf278a0baf2edfe7baafb94",
    urls = [
        "https://github.com/bazelbuild/remote-apis/archive/e94a7ece2a1e8da1dcf278a0baf2edfe7baafb94.zip",
    ],
)

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk", "zig_sdk-linux-amd64", "zig_sdk-linux-arm64", "zig_sdk-macos-amd64", "zig_sdk-macos-arm64", "zig_sdk-windows-amd64")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.31",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.31",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "buildfarm_maven",
    artifacts = [
        # keep sorted
        "com.amazonaws:aws-java-sdk-core",  # Version is specified via the BOM below
        "com.amazonaws:aws-java-sdk-s3",
        "com.amazonaws:aws-java-sdk-secretsmanager",
        "com.fasterxml.jackson.core:jackson-databind:2.20.0",
        "com.github.ben-manes.caffeine:caffeine:3.2.3",
        "com.github.docker-java:docker-java",
        "com.github.docker-java:docker-java-api",
        "com.github.docker-java:docker-java-core",
        "com.github.jnr:jffi:1.3.13",
        "com.github.jnr:jffi:1.3.13:native:1.3.13",
        "com.github.jnr:jnr-constants:0.10.4",
        "com.github.jnr:jnr-ffi:2.2.17",
        "com.github.jnr:jnr-posix:3.1.20",
        "com.github.luben:zstd-jni:1.5.7-4",
        "com.github.oshi:oshi-core:6.8.3",
        "com.github.pcj:google-options:1.0.0",
        "com.github.serceman:jnr-fuse:0.5.8",
        "com.google.api.grpc:proto-google-common-protos:2.61.1",
        "com.google.auth:google-auth-library-credentials",  # Version is specified via the BOM below
        "com.google.auth:google-auth-library-oauth2-http",  # Version is specified via the BOM below
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.code.gson:gson:2.13.2",
        "com.google.errorprone:error_prone_annotations:2.41.0",
        "com.google.errorprone:error_prone_core:2.41.0",
        "com.google.guava:failureaccess:1.0.3",
        "com.google.guava:guava:33.4.8-jre",
        "com.google.j2objc:j2objc-annotations:3.1",
        "com.google.protobuf:protobuf-java:4.32.1",
        "com.google.protobuf:protobuf-java-util:4.32.1",
        "com.owteam.engUtils:netrc:2.0.1",
        "commons-io:commons-io:2.20.0",
        "io.grpc:grpc-api",  # Version is specified via the BOM below
        "io.grpc:grpc-auth",
        "io.grpc:grpc-context",
        "io.grpc:grpc-core",
        "io.grpc:grpc-netty",
        "io.grpc:grpc-netty-shaded",
        "io.grpc:grpc-protobuf",
        "io.grpc:grpc-services",
        "io.grpc:grpc-stub",
        "io.grpc:grpc-util",
        "io.netty:netty-buffer",  # Version is specified via the BOM below
        "io.netty:netty-codec",
        "io.netty:netty-codec-http",
        "io.netty:netty-codec-http2",
        "io.netty:netty-codec-socks",
        "io.netty:netty-common",
        "io.netty:netty-handler",
        "io.netty:netty-handler-proxy",
        "io.netty:netty-resolver",
        "io.netty:netty-transport",
        "io.netty:netty-transport-classes-epoll",
        "io.netty:netty-transport-classes-kqueue",
        "io.netty:netty-transport-native-epoll",
        "io.netty:netty-transport-native-kqueue",
        "io.netty:netty-transport-native-unix-common",
        "io.prometheus:simpleclient:0.16.0",
        "io.prometheus:simpleclient_hotspot:0.16.0",
        "io.prometheus:simpleclient_httpserver:0.16.0",
        "javax.annotation:javax.annotation-api:1.3.2",
        "me.dinowernli:java-grpc-prometheus:0.6.0",
        "net.javacrumbs.future-converter:future-converter-java8-guava:1.2.0",
        "net.jcip:jcip-annotations:1.0",
        "org.apache.commons:commons-compress:1.28.0",
        "org.apache.commons:commons-lang3:3.18.0",
        "org.apache.commons:commons-pool2:2.12.1",
        "org.apache.httpcomponents:httpclient:4.5.14",
        "org.apache.tomcat:annotations-api:6.0.53",
        "org.bouncycastle:bcprov-jdk15on:1.70",
        "org.checkerframework:checker-qual:3.51.0",
        "org.jetbrains:annotations:26.0.2-1",
        "org.mockito:mockito-core:5.19.0",
        "org.openjdk.jmh:jmh-core:1.37",
        "org.openjdk.jmh:jmh-generator-annprocess:1.37",
        "org.projectlombok:lombok:1.18.40",
        "org.redisson:redisson:3.51.0",
        "org.slf4j:slf4j-simple:2.0.17",
        "org.threeten:threetenbp:1.7.2",
        "org.xerial:sqlite-jdbc:3.50.3.0",
        "org.yaml:snakeyaml:2.5",
        "redis.clients:jedis:5.2.0",
    ],
    boms = [
        # keep sorted
        "com.amazonaws:aws-java-sdk-bom:1.12.544",
        "com.github.docker-java:docker-java-bom:3.3.3",
        "com.google.auth:google-auth-library-bom:1.23.0",
        "io.grpc:grpc-bom:1.75.0",
        "io.netty:netty-bom:4.1.108.Final",
    ],
    fail_if_repin_required = True,  # TO RE-PIN: REPIN=1 bazel run @buildfarm_maven//:pin
    generate_compat_repositories = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo.maven.apache.org/maven2",
    ],
    resolver = "maven",
    strict_visibility = True,
)

# Test only maven dependencies
[
    maven.artifact(
        name = "buildfarm_maven",
        testonly = True,
        artifact = artifact,
        group = group,
        version = version,
    )
    for group, artifact, version in [coord.split(":") for coord in [
        "com.github.fppt:jedis-mock:1.0.13",
        "com.google.jimfs:jimfs:1.3.0",
        "com.google.truth:truth:1.4.2",
        "io.grpc:grpc-inprocess:1.75.0",
        "io.grpc:grpc-testing:1.75.0",
        "junit:junit:4.13.2",
    ]]
]

use_repo(
    maven,
    "buildfarm_maven",
    "unpinned_buildfarm_maven",
)

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

# Server base image
pull(
    name = "amazon_corretto_java_image_base",
    digest = "sha256:53463affec61309c62bf118c2d8cbc5d1b4b11e6f456e9f2a71e4f0a4b27f037",
    registry = "public.ecr.aws",
    repository = "amazoncorretto/amazoncorretto",
    tag = "21",
)

# Worker base image
pull(
    name = "ubuntu_noble",
    digest = "sha256:a1da084ca1429dd84a71e364e88985b4b85934f3d8717bfdc00f2fd06170158a",
    registry = "index.docker.io",
    repository = "bazelbuild/buildfarm-worker-base",
    tag = "noble",
)

# https://github.com/bazelbuild/rules_python/pull/713#issuecomment-1885628496
# Satisfy running tests in Docker as root.
bazel_dep(name = "rules_python", version = "1.6.3")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = False,
    ignore_root_user_error = True,
    python_version = "3.11",
)

build_deps = use_extension("//:extensions.bzl", "build_deps")
use_repo(
    build_deps,
    "bazel",
    "opentelemetry",
    "skip_sleep",
    "tini",
    "tini_arm64v8",
)

# this is *only* required for bazel and should not be used in our repository
bazel_dep(name = "rules_proto", version = "6.0.2")

googleapis_switched_rules = use_extension("@googleapis//:extensions.bzl", "switched_rules")
googleapis_switched_rules.use_languages(
    grpc = True,
    java = True,
)
use_repo(googleapis_switched_rules, "com_google_googleapis_imports")

find_rpm = use_extension("@rules_pkg//toolchains/rpm:rpmbuild_configure.bzl", "find_system_rpmbuild_bzlmod")
use_repo(find_rpm, "rules_pkg_rpmbuild")

register_toolchains("@rules_pkg_rpmbuild//:all")
