load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "build_buildfarm_v1test_buildfarm_proto",
    srcs = ["build/buildfarm/v1test/buildfarm.proto"],
    deps = [
        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto",
        "@com_google_googleapis//google/api:annotations_proto",
        "@com_google_googleapis//google/longrunning:operations_proto",
        "@com_google_googleapis//google/rpc:status_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

java_proto_library(
    name = "build_buildfarm_v1test_buildfarm_java_proto",
    deps = [
        ":build_buildfarm_v1test_buildfarm_proto",
        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto",
        "@com_google_googleapis//google/longrunning:operations_proto",
        "@com_google_googleapis//google/rpc:status_proto",
    ],
)

java_grpc_library(
    name = "build_buildfarm_v1test_buildfarm_java_grpc",
    srcs = [":build_buildfarm_v1test_buildfarm_proto"],
    deps = [
        ":build_buildfarm_v1test_buildfarm_java_proto",
    ],
)
