load("@grpc-java//:java_grpc_library.bzl", "java_grpc_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "build_buildfarm_v1test_buildfarm_proto",
    srcs = ["build/buildfarm/v1test/buildfarm.proto"],
    deps = [
        "@com_google_googleapis//google/api:annotations_proto",
        "@com_google_googleapis//google/longrunning:operations_proto",
        "@com_google_googleapis//google/rpc:status_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@remoteapis//build/bazel/remote/execution/v2:remote_execution_proto",
    ],
)

java_proto_library(
    name = "build_buildfarm_v1test_buildfarm_java_proto",
    deps = [
        ":build_buildfarm_v1test_buildfarm_proto",
        "@com_google_googleapis//google/longrunning:operations_proto",
        "@com_google_googleapis//google/rpc:status_proto",
        "@remoteapis//build/bazel/remote/execution/v2:remote_execution_proto",
    ],
)

java_grpc_library(
    name = "build_buildfarm_v1test_buildfarm_java_grpc",
    srcs = [":build_buildfarm_v1test_buildfarm_proto"],
    deps = [
        ":build_buildfarm_v1test_buildfarm_java_proto",
    ],
)
